--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882">
 
 <head>
     <meta charset="utf-8">
@@ -19,7 +19,8 @@
         <button onclick=handleData();>Submit</button> <br><br>
         <textarea id="html-code" rows="20" cols="100"></textarea><br/>
         <button onclick=startDownload();>Start Download</button>
-        <button onclick=copyCode();>Copy to Clipboard</button>
+        <button onclick=copyCode();>Copy to Clipboard</button><br/><br/>
+        <input type="button" value="Reload Page" onClick="document.location.reload(true)">
     </div>
 </body>
 
