Added comments and updated css

--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
+<!--
+    index.html
+    Handles the main interface for the form and HTML code
+    Created by: Kaylynn Diaz-Schott
+    Last Modified: 09/02/2020
+-->
 <!DOCTYPE html>
 <html xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882">
+
+<!--Header-->
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Generate Email Signatures</title>
+
+    <!--Javascript and Style files-->
+    <script src="script.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
+<!--Body-->
+
 <body>
     <div>
-        <script src="script.js"></script>
         <h3>Email Signature Generator</h3>
         <form id="frm1">
+            <!--Form for Employee Info-->
             Full Name (with Designations): <input type="text" name="fullname" placeholder="John Smith, SIOR®, CRE®, CCIM®, ALC, RLI"><br> Title: <input type="text" name="title" placeholder="Commercial Associate"><br> Cell Phone Number: <input type="tel"
                 name="cell" placeholder="123-456-7890"><br> Direct Line: <input type="tel" name="direct" placeholder="123-456-7890"><br>
         </form>
-        <button onclick=handleData();>Submit</button> <br><br>
-        <textarea id="html-code" rows="20" cols="100"></textarea><br/>
+        <button onclick=handleData();>Submit</button>
+        <!--Submit Button which triggers the handleData() function in script.js-->
+        <button onclick=document.location.reload(true)>New Form</button><br/><br/>
+        <!--Reloads webpage for a new form-->
+        <textarea id="html-code" rows="20" cols="100"></textarea><br/><br/>
         <button onclick=startDownload();>Start Download</button>
         <button onclick=copyCode();>Copy to Clipboard</button><br/><br/>
-        <input type="button" value="Reload Page" onClick="document.location.reload(true)">
     </div>
 </body>
 
