--- a/index.html
+++ b/index.html
@@ -27,18 +27,13 @@
         <h3>Email Signature Generator</h3>
         <form id="frm1">
             <!--Form for Employee Info-->
-            Full Name (with Designations): <input type="text" name="fullname" placeholder="John Smith, SIOR®, CRE®, CCIM®, ALC, RLI"><br>
+            Full Name (with Designations): <input type="text" name="fullname" placeholder="John Smith, SIOR®, CRE®, CCIM®, ALC, RLI"><br> Title: <input type="text" name="title" placeholder="Commercial Associate"><br>
 
-            <!--jdsflkdjskfljsdklf-->
-            Title: <input type="text" name="title" placeholder="Commercial Associate"><br>
+            <!--Adds or Removes Titles for Employees-->
+            <table id="MultipleTitles" style="width:100%"></table>
+            <!--Button to add another title-->
+            <p><input type="button" value="&#43 Add Another Title"></p>
 
-            <table id="myTable" style="width:100%">
-            </table>
-            <p>
-                <input type="button" value="&#43 Add Another Title">
-            </p>
-
-            <!--jdfklsjlksdfkldsj-->
             Cell Phone Number: <input type="tel" name="cell" placeholder="123-456-7890"><br> Direct Line: <input type="tel" name="direct" placeholder="123-456-7890"><br>
         </form>
         <button onclick=handleData();>Submit</button>
@@ -50,6 +45,7 @@
         <button onclick=copyCode();>Copy to Clipboard</button><br/><br/>
 
         <script>
+            //JQuery code to add/remove multiple titles
             $('#myTable').on('click', 'input[type="button"]', function() {
                 $(this).closest('tr').remove();
             })
