Changed id name

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             Full Name (with Designations): <input type="text" name="fullname" placeholder="John Smith, SIOR®, CRE®, CCIM®, ALC, RLI"><br> Title: <input type="text" name="title" placeholder="Commercial Associate"><br>
 
             <!--Adds or Removes Titles for Employees-->
-            <table id="MultipleTitles" style="width:100%"></table>
+            <table id="multipleTitles" style="width:100%"></table>
             <!--Button to add another title-->
             <p><input type="button" value="&#43 Add Another Title"></p>
 
