--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!--Javascript and Style files-->
     <script src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/table-to-json@1.0.0/lib/jquery.tabletojson.min.js" integrity="sha256-H8xrCe0tZFi/C2CgxkmiGksqVaxhW0PFcUKZJZo1yNU=" crossorigin="anonymous"></script>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -27,14 +28,17 @@
         <h3>Email Signature Generator</h3>
         <form id="frm1">
             <!--Form for Employee Info-->
-            Full Name (with Designations): <input type="text" name="fullname" placeholder="John Smith, SIOR®, CRE®, CCIM®, ALC, RLI"><br> Title: <input type="text" name="title" placeholder="Commercial Associate"><br>
-
+            Full Name (with Designations): <input type="text" id="fullname" placeholder="John Smith, SIOR®, CRE®, CCIM®, ALC, RLI"><br>
             <!--Adds or Removes Titles for Employees-->
+            Title: <input type="text" id="ftitle" placeholder="Commercial Associate">
             <table id="multipleTitles" style="width:100%"></table>
             <!--Button to add another title-->
             <p><input type="button" value="&#43 Add Another Title"></p>
 
-            Cell Phone Number: <input type="tel" name="cell" placeholder="123-456-7890"><br> Direct Line: <input type="tel" name="direct" placeholder="123-456-7890"><br>
+            Cell Phone Number: <input type="tel" id="cell" placeholder="123-456-7890"><br> Direct Line: <input type="tel" id="direct" placeholder="123-456-7890"><br>
+
+
+
         </form>
         <button onclick=handleData();>Submit</button>
         <!--Submit Button which triggers the handleData() function in script.js-->
@@ -50,7 +54,8 @@
                 $(this).closest('tr').remove();
             })
             $('p input[type="button"]').click(function() {
-                $('#multipleTitles').append('<tr><td><input type="text" class="fname" /></td><td><input type="button" value="Remove Title" style="background-color: #007481;border: none;color: white;padding: 8px 20px;text-align: center;text-decoration: none;display: inline-block;font-size: 12px;" /></td></tr>')
+                $('#multipleTitles').append('<tr><td><input type="text" id="title1" class="fname" /></td><td><input type="button" value="Remove Title" style="background-color: #007481;border: none;color: white;padding: 8px 20px;text-align: center;text-decoration: none;display: inline-block;font-size: 12px;" /></td></tr>')
+
             });
         </script>
     </div>
