Finished adding logic changes for multiple titles

--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
             Title: <input type="text" id="ftitle" placeholder="Commercial Associate">
             <table id="multipleTitles" style="width:100%"></table>
             <!--Button to add another title-->
-            <p><input type="button" value="&#43 Add Another Title"></p>
-
-            Cell Phone Number: <input type="tel" id="cell" placeholder="123-456-7890"><br> Direct Line: <input type="tel" id="direct" placeholder="123-456-7890"><br>
-
-
-
+            <p><input type="button" value="&#43 Add Another Title"></p>Cell Phone Number: <input type="tel" id="cell" placeholder="123-456-7890"><br> Direct Line: <input type="tel" id="direct" placeholder="123-456-7890"><br>
         </form>
         <button onclick=handleData();>Submit</button>
         <!--Submit Button which triggers the handleData() function in script.js-->
